--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "three": "^0.101.1",
-    "three-orbitcontrols": "^2.99.1"
+    "three-orbitcontrols": "^2.99.1",
+    "three.interaction": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
